[metadata]
name = wwuaggregator
version = 1.0.0
author = Western Washington University
author_email = OIE@wwu.edu
description = Aggregator for producing reporting datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wwu-edu/wwuaggregator
project_urls =
    Bug Tracker = https://github.com/wwu-edu/wwuaggregator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    polars

[options.packages.find]
where = src
